<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/obj_name"
        style="@style/MyCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:padding="5dp"
        card_view:cardCornerRadius="4dp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/info_obj_text_plan"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:background="@color/colorGrey"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/obj_name"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/info_obj_plan_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:prompt="@string/choose_from_list" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/obj_etap_job_card"
        style="@style/MyCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        card_view:cardCornerRadius="4dp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/obj_name">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/info_etap_of_job"
                android:background="@color/colorSslad"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="6dp"
                    android:layout_weight="0.4"
                    android:background="@color/colorGrey"
                    android:gravity="left|center"
                    android:text="@string/vnp_tip"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/info_vnp_plan_spinner"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:prompt="@string/choose_from_list" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="6dp"
                    android:layout_weight="0.4"
                    android:background="@color/colorGrey"
                    android:gravity="left|center"
                    android:text="@string/vnp_mop"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_tip_st"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="left|center"
                    android:text="ЛК"
                    android:maxLines="1"
                    android:background="@color/colorLightBlue"
                    android:textSize="14sp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="6dp"
                    android:layout_weight="0.4"
                    android:background="@color/colorGrey"
                    android:gravity="left|center"
                    android:text="@string/etap_work"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_tip_lk"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:gravity="left|center"
                    android:text="Шт"
                    android:maxLines="1"
                    android:background="@color/colorLightBlue"
                    android:textSize="14sp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/obj_Mop4565"
        style="@style/MyCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        card_view:cardCornerRadius="4dp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/obj_etap_job_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/place_of_job"
                android:background="@color/colorSslad"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="6dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.4"
                    android:gravity="left|center"
                    android:text="@string/korpus"
                    android:background="@color/colorGrey"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/text_korp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:hint="@string/x1"
                    android:maxLines="1"
                    android:background="@color/colorLightYellow"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.4"
                    android:gravity="left|center"
                    android:text="@string/section"
                    android:background="@color/colorGrey"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_section"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:hint="@string/x1"
                    android:maxLines="1"
                    android:background="@color/colorLightYellow"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.4"
                    android:gravity="left|center"
                    android:text="@string/stages"
                    android:background="@color/colorGrey"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_etaj"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:hint="@string/z1_z2"
                    android:maxLines="1"
                    android:background="@color/colorLightYellow"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/obj_Mop5"
        style="@style/MyCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:padding="4dp"
        card_view:cardCornerRadius="4dp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/obj_Mop4565">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/plan_job_date"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="4dp">

                <EditText
                    android:id="@+id/date_begin"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:hint="@string/date_begin"
                    android:maxLines="1"
                    android:inputType="date"
                    android:background="@color/colorLightYellow"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/date_end"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:maxLines="1"
                    android:hint="@string/date_end"
                    android:inputType="date"
                    android:background="@color/colorLightYellow"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:id="@+id/info_VN99P"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="4dp"
                    android:layout_weight="0.4"
                    android:gravity="left|center"
                    android:text="@string/end_input_data"
                    android:textAlignment="viewStart"
                    android:background="@color/colorGrey"
                    android:textSize="14sp"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:id="@+id/textVie89w4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:gravity="left|center"
                    android:text="Да"
                    android:textAlignment="viewEnd"
                    android:textSize="14sp"
                    tools:ignore="RtlCompat" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>