<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <android.support.v7.widget.CardView
        android:id="@+id/obj_name"
        style="@style/MyCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="4dp">

                <TextView
                    android:id="@+id/info_VNP234"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.6"
                    android:background="@color/colorGrey"
                    android:gravity="center"
                    android:text="Наименование Объкета"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textVie22w1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:background="@color/colorLightBlue"
                    android:gravity="center"
                    android:text="Бутово"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/info_VNP2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@color/colorGrey"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="Выбор отчета"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorLightBlue"
                    android:gravity="center"
                    android:text="Отчет по **" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/obj_Mop4"
        style="@style/MyCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/obj_name">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorSslad"
                android:gravity="center"
                android:text="Параметры формирования Отчета"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.4"
                    android:background="@color/colorGrey"
                    android:gravity="left|center"
                    android:text="@string/vnp_tip"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/text_tip_a"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:background="@color/colorLightYellow"
                    android:gravity="left|center"
                    android:hint="@string/choose_from_list"
                    android:maxLines="1"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.4"
                    android:background="@color/colorGrey"
                    android:gravity="left|center"
                    android:text="@string/vnp_tip"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/text_tip_st"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:background="@color/colorLightYellow"
                    android:gravity="left|center"
                    android:hint="@string/choose_from_list"
                    android:maxLines="1"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.4"
                    android:background="@color/colorGrey"
                    android:gravity="left|center"
                    android:text="@string/etap_work"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/text_tip_lk"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:background="@color/colorLightYellow"
                    android:gravity="left|center"
                    android:hint="@string/choose_from_list"
                    android:maxLines="1"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.4"
                    android:background="@color/colorGrey"
                    android:gravity="left|center"
                    android:text="@string/korpus"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/text_korp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:background="@color/colorLightYellow"
                    android:hint="@string/choose_from_list"
                    android:maxLines="1"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.4"
                    android:background="@color/colorGrey"
                    android:gravity="left|center"
                    android:text="@string/section"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/text_section"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:background="@color/colorLightYellow"
                    android:hint="@string/choose_from_list"
                    android:maxLines="1"
                    android:textSize="15sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.4"
                    android:background="@color/colorGrey"
                    android:gravity="left|center"
                    android:text="@string/stages"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/text_etaj"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:background="@color/colorLightYellow"
                    android:hint="@string/z1_z2"
                    android:maxLines="1"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.4"
                    android:background="@color/colorGrey"
                    android:gravity="left|center"
                    android:text="@string/etap_work"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/etap_job_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:background="@color/colorLightYellow"
                    android:hint="@string/choose_from_list"
                    android:maxLines="1"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:layout_weight="0.4"
                    android:background="@color/colorGrey"
                    android:gravity="left|center"
                    android:text="Период:"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/text_period"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:background="@color/colorLightYellow"
                    android:hint="@string/choose_from_list"
                    android:maxLines="1"
                    android:textSize="15sp" />


            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/MyCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/obj_Mop4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="48dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:background="@color/colorGrey"
                android:text="Сформировать отчет?"
                android:textSize="15sp" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:gravity="center" />
        </LinearLayout>
    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>